# facerec

./: pyproject.toml
tests/: test_app.py
